add title tag to states_list template

--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<HTML>
-	<HEAD></HEAD>
+<HTML lang='en'>
+	<HEAD>
+		<TITLE>HBNB</TITLE>
+	</HEAD>
 	<BODY>
 		<H1>States</H1>
 		<UL>
